# BRIDGE

./: .README.md.swp  .gitignore  COMMERCIAL-LICENSE.md  LICENSE  README.md  log  nohup.out  pyproject.toml  setup.py
docs/: job_submission_guide.md
examples/: in_full_config.yaml  in_job_system.yaml  in_local_job.yaml  job_system_examples.yaml  schedulers_examples.yaml
examples/scripts/: slurm_gpu.sh
infile/: in.noshock.yaml  in.simple.yaml  in.yaml
molecules/: cl20.inp  cl20.lmp  input.lammps  packmol.ipynb  packmol.py
nepactive.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
others/test/: molecules_summary.csv  packmol.inp  test.ipynb
others/test/00.test/: ensemble.py  log  md.log.bak  out.traj  packmol.inp  test.ipynb
skills/bridge-nep-training/: SKILL.md
skills/bridge-nep-training/agents/: openai.yaml
src/: 1q  log  nohup.out
src/nepactive/: OB.py  OB_new.py  README.md  README_product.md  __init__.py  _native_build.py  _native_guard_worker.py  build_native_nep.py  extract.py  force.py  format_output.py  hod.py  in.view  in.view1  in.yaml  in_noshock.yaml  logger.py  main.py  make_product.py  native_guard.py  nep_backend.py  nepsk.py  nphugo.py  npt_scr.py  npt_scr_ramp.py  omdMSST.py  opt.py  packmol.py  plt.py  random_stable.py  remote.py  sampling.py  scheduler.py  shock_vel.txt  stable.py  stable_OB.py  stable_prior.py  stable_product.py  template.py  test.ipynb  (+6 more)
src/nepactive.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/nepactive/native_nep/: README.md
test_ramp/: test_aniso_ramp.py  test_ramp.py
(+5 files in other folders)
