[build-system]
requires = ["setuptools>=42", "wheel", "pybind11>=2.10"]
build-backend = "setuptools.build_meta"

[project]
name = "nepactive"
version = "0.1"
description = "Extreme condition MLP"
authors = [
    {name = "Liu Zifeng", email = "e1146670434@163.com"}
]
license = {file = "LICENSE"}
keywords = ["keywords relating to your package"]
dependencies = [
    "ase==3.23.0",
    "mattersim",
    "numpy==1.26.4"
]

[project.scripts]
nepactive = "nepactive.main:main"
nep-identify = "nepactive.extract:cli"
nep-product = "nepactive.make_product:main"
nep-fps = "nepactive.sampling:cli"
nep-plt = "nepactive.plt:cli"
nepsk = "nepactive.nepsk:cli"
nep-init = "nepactive.force:cli"
nep-opt = "nepactive.opt:cli"
